Update version to 4.4.1-alpha

--- a/packaging/config.ini
+++ b/packaging/config.ini
@@ -1,10 +1,10 @@
 [krita]
 gitModule   = yes
-gitTag      = v4.4.0-beta1
+gitTag      = v4.4.1-alpha
 category    = graphics
 mainmodule  = branches/stable
 l10nmodule  = krita
-version     = 4.4.0-beta1
+version     = 4.4.1-alpha
 translations= yes
 docs        = no
 kde_release = no
