Add a note about Android version (patch version is calculated differently)
# Conflicts:
#	packaging/android/apk/build.gradle

--- a/packaging/android/apk/build.gradle
+++ b/packaging/android/apk/build.gradle
@@ -124,6 +124,13 @@ android {
 
     def versionMajor    = 4
     def versionMinor    = 3
+
+    /**
+     * This version does **not** correspond to the patch version
+     * of Krita. Instead, it is just incremented for every public
+     * (including alpha and beta) release of versionMajor.versionMinor
+     * branch
+     */
     def versionRelease  = 0
 
 	defaultConfig {
