Do not install Krita 3 bundle on Android
Otherwise we cannot publish a package in Play Store because it
it too big (there is a 100MiB limit)

--- a/krita/data/bundles/CMakeLists.txt
+++ b/krita/data/bundles/CMakeLists.txt
@@ -1,6 +1,16 @@
+set (krita_BUNDLE_FILES
+     README
+     Krita_4_Default_Resources.bundle
+     Krita_Artists_SeExpr_examples.bundle
+)
+
+if (NOT ANDROID)
+    set (krita_BUNDLE_FILES
+         ${krita_BUNDLE_FILES}
+         Krita_3_Default_Resources.bundle
+         )
+endif()
+
 install( FILES
-    README
-    Krita_3_Default_Resources.bundle
-    Krita_4_Default_Resources.bundle
-    Krita_Artists_SeExpr_examples.bundle
-DESTINATION  ${DATA_INSTALL_DIR}/krita/bundles)
+    ${krita_BUNDLE_FILES}
+    DESTINATION  ${DATA_INSTALL_DIR}/krita/bundles)
