Try with image/x-jp2 instead of image/jp2
(cherry picked from commit cc7f7283d6624667c698aed2ca70fb94c8226ace)

--- a/plugins/impex/jp2/krita_jp2.desktop
+++ b/plugins/impex/jp2/krita_jp2.desktop
@@ -116,7 +116,7 @@ Name[x-test]=xxKritaxx
 Name[zh_CN]=Krita
 Name[zh_TW]=Krita
 Exec=krita %u
-MimeType=image/jp2;
+MimeType=image/x-jp2;image/x-j2k
 Type=Application
 Icon=krita
 StartupNotify=true
