--- a/packaging/android/apk/AndroidManifest.xml
+++ b/packaging/android/apk/AndroidManifest.xml
@@ -18,11 +18,63 @@
             </intent-filter>
 
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <action android:name="android.intent.action.EDIT"/>
-                <category android:name="android.intent.category.BROWSABLE" />
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:scheme="content" android:mimeType="*/*"/>
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.EDIT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:scheme="content" />
+                <data android:scheme="file" />
+
+                <data android:mimeType="application/x-xcf" />
+                <data android:mimeType="image/jpeg" />
+                <data android:mimeType="image/x-r32" />
+                <data android:mimeType="image/x-r16" />
+                <data android:mimeType="image/x-r8" />
+                <data android:mimeType="image/openraster" />
+                <data android:mimeType="image/x-xpixmap" />
+                <data android:mimeType="image/x-xbitmap" />
+                <data android:mimeType="image/webp" />
+                <data android:mimeType="image/vnd.microsoft.icon" />
+                <data android:mimeType="image/x-portable-pixmap" />
+                <data android:mimeType="image/x-portable-graymap" />
+                <data android:mimeType="image/x-portable-bitmap" />
+                <data android:mimeType="image/x-psd" />
+                <data android:mimeType="image/photoshop" />
+                <data android:mimeType="image/x-photoshop" />
+                <data android:mimeType="image/vnd.adobe.photoshop" />
+                <data android:mimeType="image/x-psb" />
+                <data android:mimeType="image/heic" />
+                <data android:mimeType="image/svg+xml" />
+                <data android:mimeType="image/jp2" />
+                <data android:mimeType="image/j2k" />
+                <data android:mimeType="image/x-exr" />
+                <data android:mimeType="image/x-tga" />
+                <data android:mimeType="image/png" />
+                <data android:mimeType="image/gif" />
+                <data android:mimeType="image/tiff" />
+                <data android:mimeType="image/x-krita-raw" />
+
+                <data android:mimeType="text/csv" />
+                <data android:mimeType="application/x-krita" />
+                <data android:mimeType="application/x-extension-exr" />
+                <data android:mimeType="application/x-krita-paintoppreset" />
+                <data android:mimeType="application/pdf" />
+
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.EDIT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:scheme="content" />
+                <data android:scheme="file" />
+
+                <data android:mimeType="*/*"
+                      android:pathPattern=".*\\.kra.*" />
+
             </intent-filter>
 
             <meta-data
