--- a/plugins/dockers/recorder/CMakeLists.txt
+++ b/plugins/dockers/recorder/CMakeLists.txt
@@ -2,12 +2,14 @@ set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
 find_package(Threads REQUIRED)
 
-include_directories(SYSTEM
-                    ${AVCODEC_INCLUDE_DIRS} ${AVFORMAT_INCLUDE_DIRS} ${AVUTIL_INCLUDE_DIRS} ${SWSCALE_INCLUDE_DIRS})
+include_directories(SYSTEM ${AVCODEC_INCLUDE_DIRS} ${AVFORMAT_INCLUDE_DIRS} ${AVUTIL_INCLUDE_DIRS} ${SWSCALE_INCLUDE_DIRS})
 
 set(KRITA_RECORDERDOCKER_SOURCES
     recorder_config.cpp
+    recorder_export_config.cpp
     recorder_writer.cpp
+    recorder_export.cpp
+    recorder_profile_settings.cpp
     recorderdocker.cpp
     recorderdocker_dock.cpp
 )
@@ -17,6 +19,8 @@ set(KRITA_RECORDERDOCKER_SOURCES
 
 ki18n_wrap_ui(KRITA_RECORDERDOCKER_SOURCES
     recorderdocker.ui
+    recorder_export.ui
+    recorder_profile_settings.ui
 )
 
 add_library(kritarecorderdocker MODULE ${KRITA_RECORDERDOCKER_SOURCES})
