Add proof-of-concept for mesh transformation
(and also a poc for mesh gradients implemented using grid
interpolation)

--- a/libs/image/tests/CMakeLists.txt
+++ b/libs/image/tests/CMakeLists.txt
@@ -95,6 +95,7 @@ ecm_add_tests(
     kis_bsplines_test.cpp
     kis_warp_transform_worker_test.cpp
     kis_liquify_transform_worker_test.cpp
+    kis_mesh_transform_worker_test.cpp
     kis_transparency_mask_test.cpp
     kis_types_test.cpp
     kis_vec_test.cpp
