Revert "Remove the lock, collapse and hide option for dock titlebars"
This reverts commit b662043a20633d3bc52f9b178171a26ef9be532e.

--- a/libs/widgets/CMakeLists.txt
+++ b/libs/widgets/CMakeLists.txt
@@ -28,6 +28,10 @@ set(kritawidgets_LIB_SRCS
     KoLineStyleSelector.cpp
     KoLineStyleItemDelegate.cpp
     KoLineStyleModel.cpp
+
+    KoDockWidgetTitleBar.cpp
+    KoDockWidgetTitleBarButton.cpp
+    
     KoTitledTabWidget.cpp
 
     KoToolBoxButton.cpp
