--- a/libs/widgetutils/CMakeLists.txt
+++ b/libs/widgetutils/CMakeLists.txt
@@ -37,6 +37,7 @@ set(kritawidgetutils_LIB_SRCS
     kis_slider_spin_box.cpp
     kis_zoom_scrollbar.cpp
     kis_spin_box_unit_manager.cpp
+    kis_font_family_combo_box.cpp
 
     config/kcolorscheme.cpp
     config/kcolorschememanager.cpp
