Add a UI font selection option
Qt doesn't select the modern, nice user interface fonts on Windows,
so give the user a chance to select those themselves. And once that's
there, why not let everyone select that font.

BUG:427733
(cherry picked from commit 0bad1b9b0bf3d7e0f6269956ad381bbd2b6e1431)

--- a/libs/widgetutils/CMakeLists.txt
+++ b/libs/widgetutils/CMakeLists.txt
@@ -34,6 +34,7 @@ set(kritawidgetutils_LIB_SRCS
     kis_num_parser.cpp
     kis_slider_spin_box.cpp
     kis_spin_box_unit_manager.cpp
+    kis_font_family_combo_box.cpp
 
     config/kcolorscheme.cpp
     config/kcolorschememanager.cpp
