Make Krita buildable using NDK r20+

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -132,7 +132,14 @@ if (APPLE)
 endif ()
 
 if (ANDROID)
-  set (GLOBAL_PROFILE ${GLOBAL_PROFILE} -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE} -DANDROID_PLATFORM=${ANDROID_PLATFORM} -DANDROID_ABI=${ANDROID_ABI})
+  set (GLOBAL_PROFILE ${GLOBAL_PROFILE}
+                     -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
+                     -DANDROID_PLATFORM=${ANDROID_PLATFORM}
+                     -DANDROID_ABI=${ANDROID_ABI}
+                     -DCMAKE_FIND_ROOT_PATH=${CMAKE_FIND_ROOT_PATH})
+
+  # see: https://github.com/android/ndk/issues/929
+  unset (CMAKE_SYSROOT)
 endif()
 
 if (UNIX AND NOT APPLE)
