Split all the new mesh function into reusable entities
Now we have:

1) KisBezierUtils --- collection of utility functions to work
   with a single bezier curve

2) KisBezierPatch --- a patch defined by four bezier curves defined
   as per SVG2 specification

3) KisBezierMesh --- a basic mesh made up of multiple KisBezierPatch
   patches

4) KisBezierTransformMesh --- a mesh that can transform a QImage or a
   KisPaintDevice

5) KisBezierGradientMesh --- a mesh that can fill a QImage with a mesh
   gradient as defined in SVG2 specification

--- a/libs/image/CMakeLists.txt
+++ b/libs/image/CMakeLists.txt
@@ -321,12 +321,14 @@ set(kritaimage_LIB_SRCS
    KisProofingConfiguration.cpp
 
    kis_node_query_path.cc
- 
+
    KisTranslateLayerNamesVisitor.cpp
 
    kis_asl_layer_style_serializer.cpp
    KisAslStorage.cpp
    kis_psd_layer_style.cpp
+   KisBezierGradientMesh.cpp
+   KisBezierTransformMesh.cpp
 )
 
 set(einspline_SRCS
