Split all the new mesh function into reusable entities
Now we have:

1) KisBezierUtils --- collection of utility functions to work
   with a single bezier curve

2) KisBezierPatch --- a patch defined by four bezier curves defined
   as per SVG2 specification

3) KisBezierMesh --- a basic mesh made up of multiple KisBezierPatch
   patches

4) KisBezierTransformMesh --- a mesh that can transform a QImage or a
   KisPaintDevice

5) KisBezierGradientMesh --- a mesh that can fill a QImage with a mesh
   gradient as defined in SVG2 specification

--- a/libs/global/CMakeLists.txt
+++ b/libs/global/CMakeLists.txt
@@ -37,6 +37,9 @@ set(kritaglobal_LIB_SRCS
     KisFileUtils.cpp
     KisSignalMapper.cpp
     KisRegion.cpp
+    KisBezierUtils.cpp
+    KisBezierPatch.cpp
+    KisBezierMesh.cpp
 )
 
 add_library(kritaglobal SHARED ${kritaglobal_LIB_SRCS} )
@@ -51,6 +54,7 @@ target_link_libraries(kritaglobal
         Qt5::Widgets 
         Qt5::Xml 
         KF5::I18n
+        ${GSL_LIBRARIES} ${GSL_CBLAS_LIBRARIES}
 )
 
 set_target_properties(kritaglobal PROPERTIES
