--- a/3rdparty/ext_gmic/CMakeLists.txt
+++ b/3rdparty/ext_gmic/CMakeLists.txt
@@ -3,16 +3,12 @@ SET(PREFIX_ext_gmic "${EXTPREFIX}" )
 # Download the gmic sources
 ExternalProject_Add( ext_gmic_base
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-    URL https://gmic.eu/files/source/gmic_2.7.1.tar.gz
-    URL_MD5 11a947bb2fc1dfdd40995982c5c448eb
-
-    PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/cmake.diff
-          COMMAND  ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/no_threads.diff
+    URL https://gmic.eu/files/source/gmic_2.9.2.tar.gz
+    URL_HASH SHA256=385db1ef3ef5805bc7bcb65255e188e349fc5e0ae35687b1b914291212bc4c91
 
     SOURCE_DIR gmic
 
-    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_gmic} -D -DCMAKE_BUILD_TYPE=Release ${GLOBAL_PROFILE}
-
+    CONFIGURE_COMMAND ""
     BUILD_COMMAND ""
     INSTALL_COMMAND ""
 
@@ -20,22 +16,20 @@ ExternalProject_Add( ext_gmic_base
 )
 
 # Download and build gmic-qt
-# FIXME: Forcing CMAKE_BUILD_TYPE to Release
 ExternalProject_Add( ext_gmic_qt
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
-    URL https://github.com/c-koi/gmic-qt/archive/v.2.7.0.tar.gz
-    URL_MD5 b18577dfd5be0311bdad7737b56386dc
-    PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/desktop_icon.diff
-          COMMAND  ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/gmic-qt-cmake.diff
+    URL https://github.com/c-koi/gmic-qt/archive/v.2.9.2.tar.gz
+    URL_HASH SHA256=50b401f999ddaff7ef86657ef115a7bfa844e9c465c8a7e878dd5b6b8bba99be
+    PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0001-Add-desktop-entry.patch
 
     SOURCE_DIR gmic-qt
     INSTALL_DIR ${PREFIX_ext_gmic}
 
-    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_gmic} -DGMIC_QT_HOST=krita -DCMAKE_BUILD_TYPE=Release ${GLOBAL_PROFILE}
+    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_gmic} -DGMIC_QT_HOST=krita -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE}
 
     UPDATE_COMMAND ""
 
-    DEPENDS ext_gmic_base
+    DEPENDS ext_gmic_base ext_fftw3
 )
 
 add_custom_target(ext_gmic)
