--- a/plugins/filters/gradientmap/CMakeLists.txt
+++ b/plugins/filters/gradientmap/CMakeLists.txt
@@ -1,7 +1,12 @@
-set(kritagradientmap_SOURCES gradientmap.cpp
-krita_filter_gradient_map.cpp)
+set(kritagradientmap_SOURCES
+    KisGradientMapFilter.cpp
+    KisGradientMapConfigWidget.cpp
+    KisGradientMapFilterConfiguration.cpp
+)
 
-ki18n_wrap_ui(kritagradientmap_SOURCES wdg_gradientmap.ui)
+ki18n_wrap_ui(kritagradientmap_SOURCES
+    KisGradientMapConfigWidget.ui
+)
 
 add_library(kritagradientmap MODULE ${kritagradientmap_SOURCES})
 target_link_libraries(kritagradientmap kritaui)
