Replace the listwidget with a categorized list widget
Now we have favorites, categories and can filter on the
current tool.

--- a/plugins/dockers/toolpresets/CMakeLists.txt
+++ b/plugins/dockers/toolpresets/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(KRITA_TOOLPRESETSDOCKER_SOURCES 
     ToolPresetsPlugin.cpp 
     ToolPresets.cpp 
+    ToolPresetModel.cpp
 )
 
 ki18n_wrap_ui(KRITA_TOOLPRESETSDOCKER_SOURCES
