Rename file to follow class to TooLPresetsDocker

--- a/plugins/dockers/toolpresets/CMakeLists.txt
+++ b/plugins/dockers/toolpresets/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(KRITA_TOOLPRESETSDOCKER_SOURCES 
     ToolPresetsPlugin.cpp 
-    ToolPresets.cpp 
+    ToolPresetDocker.cpp 
     ToolPresetModel.cpp
 )
 
