Load myb paintop presets
Note: all presets loaded from folder storage have a broken thumbnail,
for some weird reason...

--- a/plugins/paintops/mypaint/brushes/CMakeLists.txt
+++ b/plugins/paintops/mypaint/brushes/CMakeLists.txt
@@ -70,4 +70,4 @@ modelling2_prev.png
 puantilism2.myb
 slow_ink_prev.png
 
-    DESTINATION ${DATA_INSTALL_DIR}/krita/mypaint-data)
+    DESTINATION ${DATA_INSTALL_DIR}/krita/paintoppresets)
