Fix loading the icons for myb presets
Loading kpp presets still selects the myb loader, though, so that's
broken, and there is a pretty bad hack in that the myb preset
class needs access to KoResourceLocator's internals -- and myb presets
loaded from a bundle still won't have an icon.

--- a/plugins/paintops/mypaint/CMakeLists.txt
+++ b/plugins/paintops/mypaint/CMakeLists.txt
@@ -24,7 +24,7 @@ ki18n_wrap_ui(kritamypaintop_SOURCES wdgmypaintoptions.ui wdgmypaintcurveoption.
 
 add_library(kritamypaintop MODULE ${kritamypaintop_SOURCES})
 
-target_link_libraries(kritamypaintop kritalibpaintop mypaint kritawidgetutils kritaui kritalibbrush)
+target_link_libraries(kritamypaintop kritalibpaintop mypaint kritawidgetutils kritaui kritalibbrush kritaresources)
 
 
 install(TARGETS kritamypaintop  DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
