--- a/krita/integration/integration.xcodeproj/xcshareddata/xcschemes/kritaquicklook.xcscheme
+++ b/krita/integration/integration.xcodeproj/xcshareddata/xcschemes/kritaquicklook.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0620"
+   LastUpgradeVersion = "1130"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,56 +14,46 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E13E64EA1C08579B0062F932"
+               BlueprintIdentifier = "84D651062560370B00CC2E75"
                BuildableName = "kritaquicklook.qlgenerator"
                BlueprintName = "kritaquicklook"
-               ReferencedContainer = "container:kritaquicklook.xcodeproj">
+               ReferencedContainer = "container:integration.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E13E64EA1C08579B0062F932"
-            BuildableName = "kritaquicklook.qlgenerator"
-            BlueprintName = "kritaquicklook"
-            ReferencedContainer = "container:kritaquicklook.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E13E64EA1C08579B0062F932"
+            BlueprintIdentifier = "84D651062560370B00CC2E75"
             BuildableName = "kritaquicklook.qlgenerator"
             BlueprintName = "kritaquicklook"
-            ReferencedContainer = "container:kritaquicklook.xcodeproj">
+            ReferencedContainer = "container:integration.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
