Upgrade macOS integration plugins
This commit brings a massive refactor to the existing plugins for macOS:

- Adds QuickLook Thumbnailing (10.15+) support.
- Adds Spotlight metadata support.
- It drops NSTasks for reading the KRA file in favor of a bundled
minizip library. NSTask is usable from QuickLook generators, but not
from Spotlight (mdimporter/mdworker).
- It adds license headers throughout the updated code, recognising the
original authors of the Quicklook plugin.

The README and packaging scripts have been updated to reflect these changes.
The LICENSE (GPLv2) has been removed to make it consistent with the rest
of Krita; feel free to contact me if this is wrong.

CCMAIL: kimageshop@kde.org

--- a/krita/integration/CMakeLists.txt
+++ b/krita/integration/CMakeLists.txt
@@ -1,3 +1,9 @@
-if (APPLE)
-    add_subdirectory(kritaquicklook)
-endif()
+project(kritaintegration)
+
+add_custom_target( kritaintegration ALL xcodebuild -project "${CMAKE_CURRENT_SOURCE_DIR}/integration.xcodeproj" -alltargets -configuration Release COMMENT build all macOS plugins )
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Build/Release/kritaquicklook.qlgenerator DESTINATION ${PLUGIN_INSTALL_DIR})
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Build/Release/kritaspotlight.mdimporter DESTINATION ${PLUGIN_INSTALL_DIR})
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Build/Release/kritaquicklookng.appex DESTINATION ${PLUGIN_INSTALL_DIR})
