SeExpr: rebrand library

--- a/libs/ui/CMakeLists.txt
+++ b/libs/ui/CMakeLists.txt
@@ -416,7 +416,7 @@ set(kritaui_LIB_SRCS
     KoDocumentInfo.cpp
 )
 
-if (SeExpr2_FOUND)
+if (KSeExpr_FOUND)
     set(kritaui_LIB_SRCS ${kritaui_LIB_SRCS}
         widgets/kis_seexpr_script_chooser.cpp
     )
