--- a/plugins/generators/CMakeLists.txt
+++ b/plugins/generators/CMakeLists.txt
@@ -4,6 +4,6 @@ add_subdirectory(pattern)
 add_subdirectory(simplexnoise)
 add_subdirectory(screentone)
 add_subdirectory(multigridpattern)
-if(SeExpr2_FOUND)
+if(KSeExpr_FOUND)
   add_subdirectory(seexpr)
 endif()
